--- a/gmission/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/gmission/src/main/res/layout/fragment_navigation_drawer.xml
@@ -7,4 +7,4 @@
           android:divider="@color/navigation_drawer_item_separator"
           android:dividerHeight="1dp"
           android:background="#1f1f1f"
-          tools:context="hk.ust.gmission.ui.NavigationDrawerFragment" />
+          tools:context=".ui.fragments.NavigationDrawerFragment" />
