--- a/gmission/src/main/res/layout/main_activity.xml
+++ b/gmission/src/main/res/layout/main_activity.xml
@@ -24,6 +24,6 @@
               android:layout_width="@dimen/navigation_drawer_width"
               android:layout_height="match_parent"
               android:layout_gravity="start"
-              android:name="hk.ust.gmission.ui.NavigationDrawerFragment" />
+              android:name="hk.ust.gmission.ui.fragments.NavigationDrawerFragment" />
 
 </android.support.v4.widget.DrawerLayout>
