--- a/gmission/src/main/res/layout/item_list.xml
+++ b/gmission/src/main/res/layout/item_list.xml
@@ -4,25 +4,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ListView
-        android:id="@android:id/list"
-        style="@style/ListView"
+    <android:in.srain.cube.views.ptr.PtrFrameLayout
+        android:id="@+id/ptr_frame"
+        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:background="@color/cube_mints_333333"
+        cube_ptr:ptr_resistance="1.7"
+        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+        cube_ptr:ptr_duration_to_close="200"
+        cube_ptr:ptr_duration_to_close_header="1000"
+        cube_ptr:ptr_keep_header_when_refresh="true"
+        cube_ptr:ptr_pull_to_fresh="false"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@android:id/empty"
-        style="@style/ListSubtitleText"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:visibility="gone" />
+        <LinearLayout
+            android:id="@+id/store_house_ptr_image_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/pager_background"
+            android:clickable="true"
+            android:padding="10dp">
 
-    <ProgressBar
-        android:id="@+id/pb_loading"
-        style="@style/ListSpinner"
-        android:layout_centerInParent="true" />
+
+            <ListView
+                android:id="@android:id/list"
+                style="@style/ListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@android:id/empty"
+                style="@style/ListSubtitleText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone" />
+
+            <ProgressBar
+                android:id="@+id/pb_loading"
+                style="@style/ListSpinner"
+                android:layout_centerInParent="true" />
+
+        </LinearLayout>
+
+    </android:in.srain.cube.views.ptr.PtrFrameLayout>
+
+
 
 </RelativeLayout>
+
 
