--- a/gmission/src/main/res/menu/bootstrap.xml
+++ b/gmission/src/main/res/menu/bootstrap.xml
@@ -4,12 +4,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:bootstrap="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/refresh"
-        android:icon="@drawable/ic_action_refresh"
-        bootstrap:showAsAction="always"
-        android:title="@string/refresh_action" >
-    </item>
+    <!--<item-->
+        <!--android:id="@+id/refresh"-->
+        <!--android:icon="@drawable/ic_action_refresh"-->
+        <!--bootstrap:showAsAction="always"-->
+        <!--android:title="@string/refresh_action" >-->
+    <!--</item>-->
 
 
     <!--<item-->
