--- a/gmission/src/main/res/layout/hit_item.xml
+++ b/gmission/src/main/res/layout/hit_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,9 +12,10 @@
     android:layout_marginTop="6dp"
     card_view:cardCornerRadius="2dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="10dp">
 
         <View
@@ -24,25 +26,24 @@
             android:background="@android:color/holo_blue_dark" />
 
         <TextView
-            android:id="@+id/text_name"
+            android:id="@+id/id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/view_hex_color"
-            android:textSize="@dimen/text_body"
+            android:layout_margin="@dimen/text_margin"
             android:textColor="@color/dark_grey"
-            tools:text="Antony Ribot" />
+            android:layout_toRightOf="@id/view_hex_color"
+            android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView
-            android:id="@+id/text_email"
+            android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/text_name"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/view_hex_color"
-            android:textSize="@dimen/text_small_body"
+            android:layout_margin="@dimen/text_margin"
             android:textColor="@color/dark_grey"
-            tools:text="developer" />
+            android:layout_toRightOf="@id/view_hex_color"
+            android:layout_marginTop="5dp"
+            android:textAppearance="?attr/textAppearanceListItem" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
