--- a/gmission/src/main/res/layout/main_activity.xml
+++ b/gmission/src/main/res/layout/main_activity.xml
@@ -10,7 +10,13 @@
     <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"/>
+    </FrameLayout>
 
     <!-- The navigation drawer -->
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
