--- a/gmission/src/main/res/values/dimens.xml
+++ b/gmission/src/main/res/values/dimens.xml
@@ -17,4 +17,8 @@
     <dimen name="text_body">16sp</dimen>
     <dimen name="text_small_body">14sp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
 </resources>
