--- a/gmission/src/main/res/values/styles.xml
+++ b/gmission/src/main/res/values/styles.xml
@@ -90,4 +90,10 @@
         <item name="android:background">@drawable/nav_menu_button_background_selector</item>
     </style>
 
+
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
