save before clean

--- a/gmission/src/main/res/layout/selection_hit_fragment.xml
+++ b/gmission/src/main/res/layout/selection_hit_fragment.xml
@@ -2,7 +2,9 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_centerHorizontal="true"
+    android:layout_centerVertical="true"
     android:id="@+id/selection_scroll_view"
     tools:context="hk.ust.gmission.ui.fragments.SelectionHitFragment"
     tools:showIn="@layout/hit_activity">
