--- a/gmission/src/main/res/layout/hit_activity.xml
+++ b/gmission/src/main/res/layout/hit_activity.xml
@@ -9,31 +9,47 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hk.ust.gmission.ui.activities.HitActivity">
 
-    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/hit_content_scroll_view"
-        android:layout_above="@+id/container"
-        tools:context="hk.ust.gmission.ui.fragments.SelectionHitFragment"
-        tools:showIn="@layout/hit_activity">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/footer_layout"
+        android:orientation="vertical"
+        android:weightSum="2" >
 
-        <TextView
+        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textColor="@color/text_shadow"
-            android:text="@string/large_text"
-            android:id="@+id/hit_content"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/hit_content_scroll_view"
+            tools:context="hk.ust.gmission.ui.fragments.SelectionHitFragment"
+            tools:showIn="@layout/hit_activity">
 
-    </android.support.v4.widget.NestedScrollView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/text_margin"
+                android:textColor="@color/text_shadow"
+                android:id="@+id/hit_content"/>
 
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/footer_layout">
-    </FrameLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/text_margin"
+                android:textColor="@color/text_shadow"
+                android:text="@string/bad_hid_notification"
+                android:id="@+id/bad_hid_notification"/>
+        </FrameLayout>
+
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
