--- a/gmission/src/main/res/values/styles.xml
+++ b/gmission/src/main/res/values/styles.xml
@@ -23,26 +23,21 @@
         <item name="android:shadowRadius">1</item>
     </style>
 
-    <style name="AvatarLarge">
+    <style name="IconLarge">
         <item name="android:layout_width">32dp</item>
         <item name="android:layout_height">32dp</item>
     </style>
 
-    <style name="AvatarMedium">
+    <style name="IconMedium">
         <item name="android:layout_width">24dp</item>
         <item name="android:layout_height">24dp</item>
     </style>
 
-    <style name="AvatarSmall">
+    <style name="IconSmall">
         <item name="android:layout_width">16dp</item>
         <item name="android:layout_height">16dp</item>
     </style>
 
-    <style name="ListView">
-        <item name="android:dividerHeight">2px</item>
-        <item name="android:divider">@drawable/bootstrap_divider</item>
-        <item name="android:cacheColorHint">@android:color/transparent</item>
-    </style>
 
     <style name="ListSubtitleText">
         <item name="android:textSize">14sp</item>
@@ -51,7 +46,7 @@
         <item name="android:layout_width">wrap_content</item>
     </style>
 
-    <!-- Custom Spinner -->
+     <!--Custom Spinner-->
     <style name="Spinner">
         <item name="android:indeterminate">true</item>
         <item name="android:indeterminateDrawable">@drawable/spinner</item>
@@ -64,15 +59,6 @@
         <item name="android:layout_height">64dp</item>
     </style>
 
-    <style name="ListItem">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:paddingLeft">10dp</item>
-        <item name="android:paddingRight">10dp</item>
-        <item name="android:paddingTop">10dp</item>
-        <item name="android:paddingBottom">10dp</item>
-        <item name="android:background">@drawable/list_item_background</item>
-    </style>
 
     <style name="BootstrapButton">
         <item name="android:background">@drawable/button_background_states</item>
