--- a/gmission/src/main/res/layout/task_map_fragment.xml
+++ b/gmission/src/main/res/layout/task_map_fragment.xml
@@ -11,7 +11,19 @@
         android:id="@+id/bt_location"
         android:background="@null"
         android:src="@drawable/button_mylocation"
-        android:layout_above="@+id/bt_addnew"
+        android:layout_above="@+id/bt_refresh"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/bt_refresh"
+        android:background="@null"
+        android:src="@drawable/button_refresh"
+        android:layout_above="@+id/bt_add_task"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:layout_alignParentRight="true"
@@ -21,12 +33,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:id="@+id/bt_addnew"
+        android:id="@+id/bt_add_task"
         android:src="@drawable/button_addnew"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/bt_location"
         android:layout_alignStart="@+id/bt_location"
-        android:layout_marginBottom="43dp" />
+        android:layout_marginBottom="63dp" />
 
 
     </RelativeLayout>
