--- a/gmission/src/main/res/layout/ask_saptial_task_activity.xml
+++ b/gmission/src/main/res/layout/ask_saptial_task_activity.xml
@@ -14,17 +14,66 @@
         android:layout_width="wrap_content"
         android:layout_height="200dip"
         layout="@layout/content_input_fragment"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="6dip"
         android:layout_marginTop="@dimen/horizontal_margin"
         android:id="@+id/input_content"/>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/input_content"
+        android:layout_marginTop="@dimen/vertical_margin"
+        android:id="@+id/answer_type_layout"
+        android:background="@drawable/rounded_text">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/horizontal_margin"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/label_answer_type"
+            android:textSize="@dimen/text_small_body"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/dark_grey"/>
+
+        <RadioGroup
+            android:id="@+id/selection_radio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:buttonTint="@color/accent_color"
+            android:orientation="horizontal" >
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:id="@+id/rb_text_type"
+                android:text="@string/label_text_type"
+                android:textColor="@color/dark_grey"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/rb_choice_type"
+                android:text="@string/label_selection_type"
+                android:textColor="@color/dark_grey"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/rb_image_type"
+                android:text="@string/label_image_type"
+                android:textColor="@color/dark_grey"/>
+
+        </RadioGroup>
+    </LinearLayout>
+
 
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/input_content"
-        android:layout_marginTop="@dimen/horizontal_margin">
+        android:layout_below="@+id/answer_type_layout"
+        android:layout_marginTop="@dimen/vertical_margin"
+        android:background="@drawable/rounded_text">
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
