--- a/gmission/src/main/res/layout/user_profile.xml
+++ b/gmission/src/main/res/layout/user_profile.xml
@@ -13,7 +13,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/rl_profile" >
 
 
@@ -22,25 +22,22 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <RelativeLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="150dp">
 
                     <RelativeLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
-                        >
+                        android:layout_centerHorizontal="true">
 
 
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/profile_image"
-                            android:layout_width="60dip"
-                            android:layout_height="60dip"
-                            android:src="@drawable/menu_background"
+                            android:layout_width="40dip"
+                            android:layout_height="40dip"
                             android:layout_marginTop="10dp"
-                            android:layout_marginBottom="10dp"
+                            android:layout_marginBottom="20dp"
+                            android:layout_marginLeft="40dp"
+                            android:src="@drawable/menu_background"
                             android:layout_alignParentLeft="true"/>
 
                         <RelativeLayout
@@ -52,30 +49,29 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/email"
-                                android:layout_centerVertical="true"
+                                android:id="@+id/username"
+                                android:text="userName"
                                 android:textStyle="italic"
-                                android:textSize="26sp"
+                                android:textSize="25sp"
+                                android:layout_marginTop="10dp"
                                 android:layout_marginLeft="20dp"
                                 android:textColor="@color/text_shadow"
-                                android:layout_centerInParent="true"
                                 />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/credit"
-                                android:layout_below="@id/email"
+                                android:text="credit"
+                                android:layout_below="@id/username"
                                 android:textColor="#778899"
-                                android:layout_marginTop="40dp"
-                                android:layout_centerHorizontal="true"
+                                android:layout_alignLeft="@+id/username"
                                 />
 
                         </RelativeLayout>
 
 
                     </RelativeLayout>
-                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -148,23 +144,30 @@
                 </LinearLayout>
 
 
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1px"
-                    android:background="?android:attr/listDivider"
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1px"
+                        android:background="?android:attr/listDivider"
+                        />
+
+
+
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1px"
+                        android:background="?android:attr/listDivider"
                     />
 
-
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1px"
-                    android:background="?android:attr/listDivider"
-                    />
-
-            </LinearLayout>
+                </LinearLayout>
 
         </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/list_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/rl_profile">
+        </FrameLayout>
 
         <TextView
             android:id="@android:id/empty"
