fix bugs and support Chinese Interface

--- a/gmission/src/main/res/layout/image_hit_fragment.xml
+++ b/gmission/src/main/res/layout/image_hit_fragment.xml
@@ -5,18 +5,19 @@
     tools:context="hk.ust.gmission.ui.fragments.ImageHitFragment">
 
     <ImageButton
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/image_capture_btn"
         android:src="@drawable/ic_action_answer_image"
         android:layout_centerInParent="true" />
 
     <ImageView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/image_photopreview_iv"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:scaleType="centerCrop"
+        android:src="@drawable/menu_background"
         android:layout_centerInParent="true" />
 
 </RelativeLayout>
